# datafusion-postgres

./: .gitignore  Cargo.toml  README.md  flake.nix
.github/: dependabot.yml
.github/workflows/: ci.yml
arrow-pg/: Cargo.toml
arrow-pg/src/: datatypes.rs  encoder.rs  error.rs  lib.rs  list_encoder.rs  row_encoder.rs  struct_encoder.rs
datafusion-postgres/: Cargo.toml
datafusion-postgres-cli/: Cargo.toml
datafusion-postgres-cli/src/: main.rs
datafusion-postgres/src/: datatypes.rs  handlers.rs  information_schema.rs  lib.rs  pg_catalog.rs
datafusion-postgres/src/encoder/: list_encoder.rs  mod.rs  row_encoder.rs  struct_encoder.rs
src/: datatypes.rs  handlers.rs  main.rs
tests-integration/: all_types.parquet  create_arrow_testfile.py  delhiclimate.csv  test.py  test.sh  test_all_types.py
