[workspace]
resolver = "2"
members = ["datafusion-postgres", "datafusion-postgres-cli"]

[workspace.package]
version = "0.5.1"
edition = "2021"
license = "Apache-2.0"
rust-version = "1.82.0"
authors = ["Ning Sun <n@sunng.info>"]
keywords = ["database", "postgresql", "datafusion"]
homepage = "https://github.com/datafusion-contrib/datafusion-postgres/"
repository = "https://github.com/datafusion-contrib/datafusion-postgres/"
documentation = "https://docs.rs/crate/datafusion-postgres/"

[workspace.dependencies]
pgwire = "0.30.2"
datafusion = { version = "47", default-features = false }
tokio = { version = "1", default-features = false }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
