[package]
name = "arrow-pg"
description = "Arrow data mapping and encoding/decoding for Postgres"
version = "0.0.1"
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"

[dependencies]
arrow.workspace = true
bytes.workspace = true
chrono.workspace = true
futures.workspace = true
pgwire.workspace = true
postgres-types.workspace = true
rust_decimal.workspace = true
