[package]
name = "datafusion-postgres-cli"
description = "Command-line tool for DataFusion's Postgres Protocol frontend"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"

[dependencies]
pgwire = { workspace = true }
datafusion = { workspace = true, default-features = true, features = ["avro"] }
tokio = { workspace = true, features = ["full"] }
datafusion-postgres = { path = "../datafusion-postgres", version = "0.5.0" }
structopt = { version = "0.3", default-features = false }
