[package]
name = "datafusion-postgres"
description = "Exporting datafusion query engine with postgres wire protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"

[dependencies]
async-trait = "0.1"
bytes = "1.10.1"
datafusion = { workspace = true }
futures = "0.3"
getset = "0.1"
log = "0.4"
pgwire = { workspace = true }
postgres-types.workspace = true
tokio = { version = "1.45", features = ["sync", "net"] }
