[package]
name = "datafusion-postgres"
description = "Exporting datafusion query engine with postgres wire protocol"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
keywords.workspace = true
homepage.workspace = true
repository.workspace = true
documentation.workspace = true
readme = "../README.md"

[dependencies]
arrow-pg = { path = "../arrow-pg", version = "0.0.1" }
bytes.workspace = true
async-trait = "0.1"
chrono.workspace = true
datafusion.workspace = true
futures.workspace = true
getset = "0.1"
log = "0.4"
pgwire.workspace = true
postgres-types.workspace = true
rust_decimal.workspace = true
tokio = { version = "1.45", features = ["sync", "net"] }
